avoid tooltip flickering
Former-commit-id: 63b59b4f4a343131e9b4752436518c54d33acc55

--- a/client-code/src/app/dashboard/episodes/episode-tooltip/episode-tooltip.component.less
+++ b/client-code/src/app/dashboard/episodes/episode-tooltip/episode-tooltip.component.less
@@ -1,7 +1,8 @@
-:host{
-    pointer-events: none;
+:host {
+    pointer-events: none !important;
 }
 .episode-tooltip {
+    pointer-events: none;
 
     background-color: #292929;
     color: white;
